<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CubeFragment" >
	
    <TextView
        android:id="@+id/noConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/noConnection"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/cubeLabel"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:text="@string/cubeLabel"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/cubeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cubeLabel"
        android:text="@string/cubeName"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/macLabel"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cubeLabel"
        android:text="@string/macLabel"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/cubeMAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cubeName"
        android:layout_toRightOf="@+id/macLabel"
        android:text="@string/cubeMAC"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/macLabel"
        android:text="@string/statusLabel"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/connStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cubeMAC"
        android:layout_toRightOf="@+id/statusLabel"
        android:text="@string/connStatus"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/connectButton"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/connectButton" />

    <ToggleButton
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />
    
</RelativeLayout>